Removed a bug
Lower 25% of screen was not visible

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
 .tarea {
   width: 100%;
   height: 100%;
-  margin-bottom: 0.5rem;
   background-image: url("../images/cc.jpg");
 }
 
